<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailContentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:scaleType="fitXY"
                android:src="@drawable/sample1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="30dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:layout_constraintTop_toBottomOf="@+id/product_image">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_profile_default"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/detail_content_owner_ex"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/profile_image"
                    app:layout_constraintTop_toTopOf="@id/profile_image" />

                <TextView
                    android:id="@+id/profile_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_content_location_ex"
                    app:layout_constraintStart_toStartOf="@id/profile_name"
                    app:layout_constraintTop_toBottomOf="@+id/profile_name" />

                <TextView
                    android:id="@+id/profile_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/detail_content_imoticon_ex"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/manner_temp_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/detail_content_manner_temp"
                    android:textColor="@color/darkgray"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@id/profile_icon"
                    app:layout_constraintTop_toBottomOf="@id/profile_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/detail_content_temp_ex"
                    android:textColor="@color/darkgreen"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/profile_icon"
                    app:layout_constraintEnd_toStartOf="@id/profile_icon"
                    app:layout_constraintTop_toTopOf="@id/profile_icon" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/horizontal_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:dividerColor="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/profile_layout">

                <TextView
                    android:id="@+id/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/detail_content_procut_name_ex"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/item_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/detail_content_product_descrtiption_ex"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/item_title"
                    app:layout_constraintTop_toBottomOf="@+id/item_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/bottom_heart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_heart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/bottom_divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            app:dividerColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bottom_heart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/detail_content_price_ex"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bottom_divider"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/chatting_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_chatting"
            android:text="@string/detail_content_chatting_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>